k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-app
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      containers:
        - name: echo
          image: zerlok/otus-ma-k8s-python-echo:0.1.0
          ports:
            - name: http
              containerPort: 8000
