k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-app
spec:
  selector:
    app: echo-app
  ports:
    - port: 8000
      targetPort: http
  type: ClusterIP
